# CS2-PREDICTOR

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  render.yaml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: ebe60f828c36_initial_schema.py
backend/src/cs2_predictor/: config.py
backend/src/cs2_predictor/api/: main.py  schemas.py
backend/src/cs2_predictor/api/routers/: matches.py  model.py  teams.py
backend/src/cs2_predictor/db/: models.py  session.py
backend/src/cs2_predictor/pipeline/: run.py
backend/src/cs2_predictor/pipeline/features/: compute.py  head_to_head.py  map_stats.py  recent_form.py  sos.py
backend/src/cs2_predictor/pipeline/model/: calibration.py  dataset.py  predict.py  train.py
backend/src/cs2_predictor/pipeline/scraper/: hltv.py  items.py  middleware.py  persistence.py  pipelines.py  runner.py  utils.py
backend/src/cs2_predictor/pipeline/scraper/spiders/: match_detail.py  matches.py  results.py  teams.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_matches_detail.py  test_matches_upcoming.py  test_model.py  test_teams.py
backend/tests/db/: test_models.py
backend/tests/pipeline/: test_hltv_scraper.py  test_pipelines.py  test_run.py  test_scraper_persistence.py  test_spiders.py
backend/tests/pipeline/features/: test_compute.py  test_head_to_head.py  test_map_stats.py  test_recent_form.py  test_sos.py
backend/tests/pipeline/model/: test_calibration.py  test_dataset.py  test_predict.py  test_train.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+15 files in other folders)
